--- a/project10.html
+++ b/project10.html
@@ -25,14 +25,32 @@
       </div>
     </header>
     <h1>Analyze your text <br />in real-time.</h1>
-    <div class="container">
-      <textarea
-        style="width: 600px"
-        rows="10px"
-        placeholder="Start typeing here...(or paste your text)"
-      ></textarea>
+
+    <textarea
+      style="width: 600px"
+      rows="10px"
+      placeholder="Start typeing here...(or paste your text)"
+    ></textarea>
+
+    <div class="options">
+      <label for="checkbox1">
+        <input type="checkbox" id="checkbox1" name="checkbox1" />
+      </label>
+      <p>Exclude Spaces</p>
+
+      <label for="checkbox2">
+        <input type="checkbox" id="checkbox2" name="checkbox2" />
+      </label>
+      <p>Set Character Limit</p>
+
+      <div class="right-paragraph">
+        <p>Reading time: 0 minute</p>
+      </div>
     </div>
-   
+    <div class="containers">
+      <div class="container1">80 <span>Total Characters</span></div>
+      <div class="container2">140 <span>Word Count</span></div>
+      <div class="container3">21 <span>Sentence Count</span></div>
     </div>
   </body>
 </html>
