--- a/project10.html
+++ b/project10.html
@@ -52,5 +52,9 @@
       <div class="container2">140 <span>Word Count</span></div>
       <div class="container3">21 <span>Sentence Count</span></div>
     </div>
+    <footer>
+      <h4>Letter Density</h4>
+      <p>No characters found. Start typing to see letter density.</p>
+    </footer>
   </body>
 </html>
