--- a/project10.html
+++ b/project10.html
@@ -44,7 +44,7 @@
       <p>Set Character Limit</p>
 
       <div class="right-paragraph">
-        <p>Reading time: 0 minute</p>
+        <p>Approx reading time: 0 minute</p>
       </div>
     </div>
     <div class="containers">
